--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/isgilman"
+  github           : "isgilman"
   google_plus      :
   keybase          :
   instagram        :
