--- a/_config.yml
+++ b/_config.yml
@@ -80,8 +80,8 @@ author:
   name             : "Ian Gilman"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Evolutionary biologist and botanist"
-  location         : "University of Idaho"
-  email            : "gilm7871@vandals.uidaho.edu"
+  location         : "PhD Student at Yale University"
+  email            : "ian.gilman@yale.edu"
   uri              :
   bitbucket        :
   codepen          :
