--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   bitbucket        :
   codepen          :
   dribbble         :
-  flickr           : "https://www.flickr.com/photos/142736247@N08/"
+  flickr           : "https://www.flickr.com/gp/142736247@N08/t3K78U"
   facebook         :
   foursquare       :
   github           : "isgilman"
