--- a/_config.yml
+++ b/_config.yml
@@ -244,5 +244,7 @@ defaults:
       comments: # true
       share: true
       related: true
+    header:
+      overlay_image: "/assets/images/OR_coast.JPG"
 
 remote_theme: "mmistakes/minimal-mistakes"
