--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   bitbucket        :
   codepen          :
   dribbble         :
-  flickr           : "https://www.flickr.com/gp/142736247@N08/t3K78U"
+  flickr           : "https://www.flickr.com/gp/142736247@N08/8Yvr2L"
   facebook         :
   foursquare       :
   github           : "isgilman"
