--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@ main:
     url: https://isgilman.github.io/assets/PDFs/Gilman_CV.pdf
   - title: "About"
     url: https://isgilman.github.io/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
+  - title: "Sample Posts"
+    url: https://isgilman.github.io/pages/home.md
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
