--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "Vitae"
     url: https://isgilman.github.io/assets/PDFs/Gilman_CV.pdf
   - title: "About"
-    url: https://isgilman.github.io/assets/_pages/about.md
+    url: "/assets/_pages/about.md"
   #- title: "Sample Posts"
   #  url: https://isgilman.github.io/pages/home.md
   # - title: "Sample Collections"
