--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,7 @@
 
 # Site Settings
 locale                   : "en"
-title                    : "Ian S Gilman"
-header:
-  overlay_image: "/assets/images/OR_coast.JPG"
+#title                    : "Ian S Gilman"
 title_separator          : "-"
 name                     : "Ian S Gilman"
 description              : "I am an evolutionary biologist and botanist in the [Edward's Lab](http://edwardslab.org) at Yale University. I'm interested in the evolution of CAM photosynthesis and its different forms."
