--- a/_config.yml
+++ b/_config.yml
@@ -77,6 +77,7 @@ analytics:
 
 # Site Author
 author:
+  format           : "md"
   name             : "Ian Gilman"
   avatar           : "/assets/images/Puffball.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an evolutionary biologist and botanist in the [Edward's Lab](http://edwardslab.org) at Yale University. I'm interested in the evolution of CAM photosynthesis and its different forms."
