--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -8,7 +8,6 @@ en: &DEFAULT_EN
   pagination_next            : "Next"
   breadcrumb_home_label      : "Home"
   breadcrumb_separator       : "/"
-  menu_label                 : "Toggle Menu"
   toc_label                  : "On This Page"
   ext_link_label             : "Direct Link"
   less_than                  : "less than"
@@ -57,7 +56,6 @@ es: &DEFAULT_ES
   pagination_next            : "Siguiente"
   breadcrumb_home_label      : "Inicio"
   breadcrumb_separator       : "/"
-  menu_label                 :
   toc_label                  : "Contenidos"
   ext_link_label             : "Enlace"
   less_than                  : "menos de"
@@ -102,10 +100,9 @@ fr: &DEFAULT_FR
   pagination_next            : "Suivant"
   breadcrumb_home_label      : "Accueil"
   breadcrumb_separator       : "/"
-  menu_label                 :
   toc_label                  : "Sur cette page"
   ext_link_label             : "Lien direct"
-  less_than                  : "moins de"
+  less_than                  : "plus petit que"
   minute_read                : "minute de lecture"
   share_on_label             : "Partager sur"
   meta_label                 :
@@ -115,8 +112,8 @@ fr: &DEFAULT_FR
   comments_label             : "Laisser un commentaire"
   comments_title             :
   more_label                 : "Lire plus"
-  related_label              : "Vous pourriez aimer aussi"
-  follow_label               : "Contact"
+  related_label              : "Vous pourriez aimer"
+  follow_label               : "Suivez moi"
   feed_label                 : "Flux"
   powered_by                 : "Propulsé par"
   website_label              : "Site"
@@ -132,7 +129,7 @@ fr: &DEFAULT_FR
   comment_form_website_label : "Site web (optionnel)"
   comment_btn_submit         : "Envoyer"
   comment_btn_submitted      : "Envoyé"
-  comment_success_msg        : "Merci pour votre commentaire, il sera visible sur le site une fois approuvé."
+  comment_success_msg        : "Merci pour votre comentaire, il sera visible sur le site une fois approuvé."
   comment_error_msg          : "Désolé, une erreur est survenue lors de la soumission. Vérifiez que les champs obligatoires ont été remplis et réessayez."
   loading_label              : "Chargement..."
 fr-FR:
@@ -150,7 +147,6 @@ tr: &DEFAULT_TR
   pagination_next            : "Sonraki"
   breadcrumb_home_label      : "Ana Sayfa"
   breadcrumb_separator       : "/"
-  menu_label                 :
   toc_label                  : "İçindekiler"
   ext_link_label             : "Doğrudan Bağlantı"
   less_than                  : "Şu süreden az: "
@@ -193,7 +189,6 @@ pt: &DEFAULT_PT
   pagination_next            : "Seguinte"
   breadcrumb_home_label      : "Início"
   breadcrumb_separator       : "/"
-  menu_label                 :
   toc_label                  : "Nesta Página"
   ext_link_label             : "Link Direto"
   less_than                  : "menos de"
@@ -232,7 +227,6 @@ pt-BR:
   pagination_next            : "Próxima"
   breadcrumb_home_label      : "Home"
   breadcrumb_separator       : "/"
-  menu_label                 :
   toc_label                  : "Nesta página"
   ext_link_label             : "Link direto"
   less_than                  : "meno que"
@@ -275,7 +269,6 @@ it: &DEFAULT_IT
   pagination_next            : "Prossima"
   breadcrumb_home_label      : "Home"
   breadcrumb_separator       : "/"
-  menu_label                 :
   toc_label                  : "Indice della pagina"
   ext_link_label             : "Link"
   less_than                  : "meno di"
@@ -318,7 +311,6 @@ zh: &DEFAULT_ZH
   pagination_next            : "向后"
   breadcrumb_home_label      : "首页"
   breadcrumb_separator       : "/"
-  menu_label                 :
   toc_label                  : "在本页上"
   ext_link_label             : "直接链接"
   less_than                  : "少于"
@@ -350,14 +342,14 @@ zh: &DEFAULT_ZH
   comment_success_msg        : "Thanks for your comment! It will show on the site once it has been approved."
   comment_error_msg          : "Sorry, there was an error with your submission. Please make sure all required fields have been completed and try again."
   loading_label              : "Loading..."
-zh-CN:
-  <<: *DEFAULT_ZH
-zh-HK:
-  <<: *DEFAULT_ZH
-zh-SG:
-  <<: *DEFAULT_ZH
-zh-TW:
-  <<: *DEFAULT_ZH
+  zh-CN:
+    <<: *DEFAULT_ZH
+  zh-HK:
+    <<: *DEFAULT_ZH
+  zh-SG:
+    <<: *DEFAULT_ZH
+  zh-TW:
+    <<: *DEFAULT_ZH
 
 # German / Deutsch
 # -----------------
@@ -367,7 +359,6 @@ de: &DEFAULT_DE
   pagination_next            : "Nächste"
   breadcrumb_home_label      : "Home"
   breadcrumb_separator       : "/"
-  menu_label                 :
   toc_label                  : "Auf dieser Seite"
   ext_link_label             : "Direkter Link"
   less_than                  : "weniger als"
