--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   bitbucket        :
   codepen          :
   dribbble         :
-  flickr           :
+  flickr           : "142736247@N08/5G1u42"
   facebook         :
   foursquare       :
   github           : "isgilman"
@@ -97,7 +97,7 @@ author:
   linkedin         : 
   pinterest        :
   soundcloud       :
-  stackoverflow    : # "123456/username" (the last part of your profile url, e.g. http://stackoverflow.com/users/123456/username)
+  stackoverflow    : "6317380/ian-gilman" (the last part of your profile url, e.g. http://stackoverflow.com/users/123456/username)
   steam            :
   tumblr           :
   twitter          :
